[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-black-box"
version = "0.1.0"
description = "Flight recorder for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Debraj Mukherjee" }]
keywords = [
  "agents",
  "ai",
  "audit",
  "cli",
  "developer-tools",
  "observability",
  "open-source",
  "testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
agent-black-box = "agent_black_box.cli:main"

[project.urls]
Homepage = "https://github.com/debraj-m/agent-black-box"
Issues = "https://github.com/debraj-m/agent-black-box/issues"

[tool.setuptools.packages.find]
where = ["src"]
